tests/rascal/negative/type_errors/L1/18_expression_ES10_D4_98.ob
MODULE Test18;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               z := (((+ (y MOD x)) + ((y - 1223) - (200 * y))) DIV (((1 + 1) + (x * 1223)) * (- (z * 2))));
               z := ((+ ((0 * x) * (1223 + 200))) * (((y DIV 1223) - (y * 1)) * ((z - 1223) - (+ 1223))));
               z := ((((- y) DIV (z * 200)) * (- (1 - z))) MOD (((2 * 0) + (0 + 2)) MOD ((x + 1223) MOD (200 + 1223))));
               x := (+ (- ((+ 0) + (1223 * z))));
               p := ((- (+ (0 - 200))) = (((+ y) * (+ z)) DIV (+ (- 200))));
               x := ((((200 - 200) MOD (x * 1223)) - ((y + 1) - (- 200))) - (+ ((y - y) - (+ 2))));
               p := ((+ ((1223 * 2) DIV (+ z))) < (((2 - 2) MOD (+ 200)) MOD ((z + x) - (200 MOD 1))));
  (* error *)  r := (~ ((~ (p = y)) & ((0 # 1223) OR (z <= 0))));
               r := ((((- 1223) * (200 * 200)) - ((+ x) * (y DIV 200))) >= (((200 * 200) - (- x)) DIV ((+ 2) - (2 MOD 1223))));
               p := ((((1223 * x) - (2 + x)) < (- (0 DIV 1223))) & (((2 - x) + (1 - 200)) = ((200 MOD z) * (+ 0))))
END Test18.